add sprint 2 details

--- a/css/course.css
+++ b/css/course.css
@@ -489,6 +489,10 @@ figcaption {
   text-align: center;
 }
 
+dt {
+  font-weight: bold;
+}
+
 @media screen and (max-width: 400px) {
   #content {
     width: 100%;
