swapi demo add active

--- a/examples/sw/styled/styles.css
+++ b/examples/sw/styled/styles.css
@@ -81,6 +81,9 @@ main {
 .film-list li:hover {
   text-decoration: underline;
 }
+.active {
+  background-color: var(--orange);
+}
 
 .detail-list {
   list-style-type: none;
