--- a/css/course.css
+++ b/css/course.css
@@ -1,12 +1,3 @@
-/********************************************************
-    The purpose of course.css is to house only the css
-    specific to an individual course. The online.css
-    houses all the default template formatting.
-********************************************************/
-/* DO NOT DELETE OR MODIFY THIS IMPORT */
-/* @import url('https://content.byui.edu/integ/gen/599082e0-3e89-4fd9-ac69-2615865d63c7/0/online.css'); */
-
-/* Add Course Specific css Below */
 :root {
   --header-background: #21a048;
   --callout-background-color: #eaeaea;
@@ -75,7 +66,7 @@ a:visited {
   /* box-shadow: 0 0 12px #000000; */
 }
 
-/*
+/* HTML for the header banner
 <div>
   <h1><span>WEB</span> Fundamentals</h1>
   <h2>WDD 130</h2>
